--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                <!-- featured image -->
                <div class="col-md-6 wow fadeInRight" data-wow-delay="0.5" data-wow-duration="1s">
                   <div class="full">
-                     <div class="center"><img src="images/ser1.png" alt="#" /></div>
+                     <div class="center images"><img src="images/ser1.png" alt="#" /></div>
                   </div>
                </div>
                <!-- end featured image -->
@@ -102,7 +102,7 @@
                <!-- featured image -->
                <div class="col-md-6 wow fadeInLeft" data-wow-delay="0.5" data-wow-duration="1s">
                   <div class="full">
-                     <div class="center"><img src="images/ser2.png" alt="#" /></div>
+                     <div class="center images"><img src="images/ser2.png" alt="#" /></div>
                   </div>
                </div>
                <!-- end featured image -->
@@ -128,7 +128,7 @@
                <!-- featured image -->
                <div class="col-md-6 wow fadeInRight" data-wow-delay="0.5" data-wow-duration="1s">
                   <div class="full">
-                     <div class="center"><img src="images/ser3.png" alt="#" /></div>
+                     <div class="center images"><img src="images/ser3.png" alt="#" /></div>
                   </div>
                </div>
                <!-- end featured image -->
