--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
          </div>
          <!-- footer bottom -->
          <div class="footer_bottom">
-            <p>Dessigned and developed by <strong>html.design</strong></p>
+            <p>Dessigned and developed by <strong>IT Coorporation</strong></p>
          </div>
       </footer>
       <!-- end footer -->
